# raytracer

./: .gitignore  Cargo.toml  README.md
benches/: render.rs
src/: AABB.rs  benchmark_world.rs  bvh_node.rs  camera.rs  colour.rs  config.rs  dialectric_material.rs  hittable.rs  hittable_list.rs  interval.rs  lambertian_material.rs  lib.rs  main.rs  material.rs  metal_material.rs  random.rs  random_world.rs  ray.rs  raytracer.rs  sphere.rs  vec3.rs
