[package]
name = "raytracer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.25.0"
indicatif = "0.17.8"
rand = "0.9.0-alpha.1"
clap = { version = "4.5.4", features = ["derive"] }
rayon = "1.10.0"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "render"
harness = false